--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -158,10 +158,10 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
         \label{rim}
         \end{equation}
         
-        Pairwise interactions which are missing from Eq. 1 can be approximated by Eq. 2 by multiplying the relevant $r_{i}$ and $e_{j}$ such that $\beta_{ij} = r_{i} e_{j}$. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each elements's effects on other neighbours, whilst the RIM applies only to those unrealised interactions. 
+        Pairwise interactions which cannot be f inferred from Eq. 1 can be approximated by Eq. 2 by multiplying the relevant $r_{i}$ and $e_{j}$ such that $\beta_{ij} = r_{i} e_{j}$. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each elements's effects on other neighbours, whilst the RIM applies only to those unrealised interactions. 
 
     \paragraph{}
-        In order to allow both the NDDM and RIM interaction estimates to contribute to the likelihood, we first used the NDDM to quantify observed interactions and then used those to estimate species-specific $r$ and $e$ parameters such that: 
+        In order to allow both the NDDM and RIM interaction estimates to contribute to the likelihood, we first used the NDDM to quantify observed interactions and then used those to estimate species-specific $r_i$ and $e_j$ parameters such that: 
     
         \begin{equation}
         r_i e_j \sim logistic \left ( \beta_{ij}, \sigma \right )
@@ -171,16 +171,16 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
         where $\sigma$ is a community-level scale parameter for the logistic distribution. We use a logistic distribution here because the heavier tails make it a slightly weaker informative prior than a normal distribution. $\sigma$ defines how widely the tails extend and can be expressed in terms of the standard deviation. 
 
 
-    \subsection{Standardising effects into per-capita interactions}
+    \subsection{Rescaling effects into per-capita interactions}
 
-        The $\beta_{ij}$ and $r_i e_j$ estimates returned by the framework describe the effect of species $j$ on the proxy for lifetime reproductive fitness of species $i$. Differences in the magnitude of these interaction terms may thus reflect differences in reproductive fitness, which can vary widely both between species and under different environmental conditions. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per-capita} interaction strengths \parencite{Godoy2014, Bimler2018}. The appropriate scaling is determined by writing the neighbour density-dependant model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
+        The $\beta_{ij}$ and $r_i e_j$ estimates returned by the framework describe the effect of species $j$ on the proxy for lifetime reproductive fitness of species $i$. Differences in the magnitude of these interaction terms may thus reflect differences in reproductive fitness, which can vary widely both between species and under different environmental conditions. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per-capita} interaction strengths \parencite{Godoy2014, Bimler2018}. The appropriate scaling is determined by rewriting the neighbour density-dependant model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
 
         \begin{equation}
         P_{i} = \beta_{i0} \left ( 1 - \sum_{j=1}^{S} {\beta_{ij}}'' N_{j} \right )
         \label{LVform}
         \end{equation}
 
-        This reveals that our interaction terms can be rescaled into per-capita interaction strengths by dividing them with the recipient species' intrinsic fitness:  
+        This reveals that our interaction terms can be rescaled into per-capita interaction strengths by dividing them by the recipient species' intrinsic fitness:  
 
         \begin{equation}
         {\beta_{ij}}'' = \frac{\beta_{ij}}{\beta_{i0}}
@@ -209,17 +209,13 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
         \paragraph{}
         STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. \textcite{Ellison2004} also provides an accessible review of parameter estimate and the use of posterior distributions using a worked example on ant species richness data.
 
-        In order to allow a seamless integration between the NDDM and RIM and for both models to contribute to the likelihood, the joint model framework was written in the STAN programming language which uses Bayesian estimation methods. This approach is  returns parameter estimates as distributions rather than point estimates, allowing for easy inclusion of uncertainty in the analysis of results. Model parameters are sampled 1000 times from the 80\% posterior confidence intervals to construct parameter estimates. We then apply bootstrap sampling to each posterior interaction strength distribution to create 1000 samples of the community interaction matrix. [this gts repeated in the case study bit below?]
-
-        %----------------------------------
+        In order to allow a seamless integration between the NDDM and RIM and for both models to contribute to the likelihood, the joint model framework was written in the STAN programming language which uses Bayesian estimation methods. This approach is  returns parameter estimates as distributions rather than point estimates, allowing for easy inclusion of uncertainty in the analysis of results. Model parameters are sampled 1000 times from the 80\% posterior confidence intervals to construct parameter estimates. We then apply bootstrap sampling to each posterior interaction strength distribution to create 1000 samples of the community interaction matrix. 
 
 
     \section{Case study}
 
-       % We applied the model framework described above to a case study of annual wildflower plants. After quantifying the interaction matrix, we scale all interaction samples using estimates of intrinsic fitness ($\beta_{i0}$) and experimentally-measured species demographic rates. The scaling is determined by a system-appropriate population dynamic model and allows us to translate the interaction matrix into per-capita effects on  abundance. This transformation places the resulting interaction strengths on the same scale and allows us to compare the community-wide effects of different species, amongst other potential applications further illustrated in the Results and Discussion. 
-        [IDK where this paragraph above shoud go??]
-
-We applied this framework to annual wildflower community dataset from Western Australia collected in 2016. This dataset contains observations of individual plant seed production from 22 different focal species, and the identity and abundance of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. We used the framework to quantify interactions  between these 22 focal species and 53 neighbouring species, and derived per-capita interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \citep{}. Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods.
+      
+        We applied this framework to annual wildflower community dataset from Western Australia collected in 2016. This dataset contains observations of individual plant seed production from 22 different focal species, and the identity and abundance of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. We used the framework to quantify interactions between these 22 focal species and 53 neighbouring species, and derived per-capita interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \citep{Levine2009, Mayfield2017, Bimler2018} which required experimentally-measured species demographic rates. Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our parameter estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction network. Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods.
 
 
 \section{Results}
@@ -254,6 +250,8 @@ We applied this framework to annual wildflower community dataset from Western Au
     \subsection{Scaling the interactions}
     
 I don't know where this goes - does it just repeat the methods? maybe reduce to a few lines in results before case study results?
+
+ % We applied the model framework described above to a case study of annual wildflower plants. After quantifying the interaction matrix, we scale all interaction samples using estimates of intrinsic fitness ($\beta_{i0}$) and experimentally-measured species demographic rates. The scaling is determined by a system-appropriate population dynamic model and allows us to translate the interaction matrix into per-capita effects on  abundance. This transformation places the resulting interaction strengths on the same scale and allows us to compare the community-wide effects of different species, amongst other potential applications further illustrated in the Results and Discussion. 
 
     \paragraph{}
 	The interaction matrix resulting from the joint model captures the likely effects of neighbours on the performance of focal elements. Differences in the magnitude of these interaction terms reflect differences in intrinsic performance (performance in the absence of neighbours, either competitive or facilitative) of the focal elements. In order to make interactions comparable between elements which may have very different baseline values of performance, interaction terms can be rescaled by dividing them by the returned values for intrinsic performance. 
@@ -407,7 +405,7 @@ I don't know where this goes - does it just repeat the methods? maybe reduce to 
         \subsubsection{A model for annual plant population dynamics}
 
         \paragraph{}
-        The above model framework returns species-specific estimates of intrinsic fitness ($\beta_{i0}$), as well as as a species x neighbour matrix of observed ($\beta_{ij}$) and unobserved ($r_i e_j$) interaction estimates which quantify the effects of one neighbour $j$ on the intrinsic fitness of a focal species $i$. Though useful as they are, these estimates can lead to a wider range of potential applications when integrated into models of population dynamics. For example, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. Importantly, it is necessary to specifiy a model describing population dynamics in order to draw conclusions about the effects of interactions and network structure on the maintenance of community diversity and stability. 
+        The above model framework returns species-specific estimates of intrinsic fitness ($\beta_{i0}$), as well as as a species x neighbour matrix of realised ($\beta_{ij}$) and unrealised ($r_i e_j$) interaction estimates which quantify the effects of one neighbour $j$ on the intrinsic fitness of a focal species $i$. Though useful as they are, these estimates can lead to a wider range of potential applications when integrated into models of population dynamics. For example, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. Importantly, it is necessary to specifiy a model describing population dynamics in order to draw conclusions about the effects of interactions and network structure on the maintenance of community diversity and stability. 
 
         \paragraph{} 
         We defined the following model for annual plants with a seed bank \parencite{Levine2009, Mayfield2017, Bimler2018} which describe the rate of change in a focal species' \textit{i} abundance of seeds in a seed bank from one year to the next: 
